Added in most of site syntax

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,9 +24,156 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
+  <header>
 
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+    <div class="content-wrapper">
+
+      <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+        
+      <nav>
+  
+        <ul>
+
+          <li><a href="faq/index.html" target="self">FAQ</a></li>
+          <li><a href="about/index.html" target="self">ABOUT</a></li>
+
+        </ul>
+  
+      </nav>
+
+    </div>
+
+  </header>
+
+
+  <main>
+
+    <section>
+      <h1> Retreat from the desk, return refreshed.</h1>
+      
+      <h3> Want to join the next retreat?</h3>
+
+      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+
+      <h3> Find out more </h3>
+
+      <form>
+
+        <input type="text" name="name" value="email address" placeholder="name@email.com">
+
+        <input type="button" value="Download Itinerary">
+
+      </form>
+
+    </section>
+
+
+   <aside>
+
+    <p>Have the work week you always dreamed of - without the bad wifi.</p>
+
+    <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+
+    <p>12 private rooms with ensuite bathrooms, 2 groups meeting rooms, and 4 breakout rooma.</p>
+
+    <p>Private chef team providing on demand meals - just like your team kitchen</p>
+
+    <p> 5 outdoor obstacle courses, including private beach <sup>1</sup>&frasl;<sub>2</sub> mile from bungalow.</p>
+
+    <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+
+    <p>Dedicated computer room for times that you need to use wifi.</p>
+
+
+   </aside>
+
+
+   <section>
+
+    <h3>Be a better team in 5 days, like these.</h3>
+
+    <p>LaCrue Bottling Co. October 2017</p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+      ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+    </p>
+
+
+   </section>
+
+
+  </main>
+
+  <footer>
+
+    <div class="content-wrapper">
+
+      <div class="footer-content">
+
+        <div class="contact">
+          <address>
+
+            <h3>Contact</h3>
+            <a href="tel:5555555555">555-555-5555</a>
+            <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+
+
+          </address>
+
+        </div>
+
+        <div class="social">
+
+          <h3>Social</h3>
+
+          <div class="social-icons">
+
+            <p>
+
+              <a href="https://www.facebook.com/yoursite" target="self">
+                <img src="" alt="facebook logo>">
+              </a>
+
+            </p>
+
+            <p>
+
+              <a href="https://twitter.com/i/flow/login" target="self">
+                <img src="" alt="twitter logo">
+              </a>
+
+            </p>
+
+            <p>
+
+              <a href="https://www.instagram.com/accounts/login/" target="self">
+                <img src="" alt="instagram logo">
+              </a>
+
+          </p>
+
+              <!--include any other social links-->
+
+          </div>
+
+        </div>
+
+      </div>  <!--footer content ends-->
+
+    </div>  <!--footer content-wrapper ends-->
+
+    <div class="copyright">
+
+      <p>Copyright 2019 | Unplugged</p>
+
+    </div>
+
+  </footer>
+
+
+
+
+  <!-- Add your site or application content here -->
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
