Changed some syntax to be similiar to solution code

--- a/index.html
+++ b/index.html
@@ -28,17 +28,21 @@
 
     <div class="content-wrapper">
 
-      <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
-        
+      <a href="#">
+        <img src="img/unpluggedlogo.png" alt="unplugged logo">
+      </a>
+
+      <div class="header-divider"></div>
+
       <nav>
-  
+
         <ul>
 
           <li><a href="faq/index.html" target="self">FAQ</a></li>
           <li><a href="about/index.html" target="self">ABOUT</a></li>
 
         </ul>
-  
+
       </nav>
 
     </div>
@@ -48,59 +52,91 @@
 
   <main>
 
-    <section>
-      <h1> Retreat from the desk, return refreshed.</h1>
-      
-      <h3> Want to join the next retreat?</h3>
+    <section top-section>
 
-      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+      <div class="content-wrapper">
 
-      <h3> Find out more </h3>
+        <h1> Retreat from the desk, return refreshed.</h1>
 
-      <form>
-
-        <input type="text" name="name" value="email address" placeholder="name@email.com">
-
-        <input type="button" value="Download Itinerary">
-
-      </form>
+      </div>
 
     </section>
 
 
-   <aside>
+    <aside>
 
-    <p>Have the work week you always dreamed of - without the bad wifi.</p>
+      <div class="content-wrapper">
 
-    <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+        <div class="form-info">
 
-    <p>12 private rooms with ensuite bathrooms, 2 groups meeting rooms, and 4 breakout rooma.</p>
+          <h3> Want to join the next retreat?</h3>
 
-    <p>Private chef team providing on demand meals - just like your team kitchen</p>
+          <p>
+            Find out when we are holding our next retreat and how your company or team can sign up!
+          </p>
 
-    <p> 5 outdoor obstacle courses, including private beach <sup>1</sup>&frasl;<sub>2</sub> mile from bungalow.</p>
+        </div>
 
-    <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+        <div class="form">
 
-    <p>Dedicated computer room for times that you need to use wifi.</p>
+          <h3>Find out more</h3>
+          <input type="text" name="name" value="name@email.com">
+          <input type="button" value="Download Itinerary">
+
+        </div>
+
+      </div>
+
+      <div class="content-wrapper">
+
+        <div class="resort-description">
+
+          <p>Have the work week you always dreamed of - without the bad wifi.</p>
+
+          <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+
+          <p>12 private rooms with ensuite bathrooms, 2 groups meeting rooms, and 4 breakout rooma.</p>
+
+          <p>Private chef team providing on demand meals - just like your team kitchen</p>
+
+          <p> 5 outdoor obstacle courses, including private beach <sup>1</sup>&frasl;<sub>2</sub> mile from bungalow.
+          </p>
+
+          <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+
+          <p>Dedicated computer room for times that you need to use wifi.</p>
+
+        </div>
+
+      </div>
 
 
-   </aside>
+    </aside>
 
 
-   <section>
+    <section>
 
-    <h3>Be a better team in 5 days, like these.</h3>
+      <div content-wrapper>
 
-    <p>LaCrue Bottling Co. October 2017</p>
+        <div class="closing-section">
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-      ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    </p>
+          <h3>Be a better team in 5 days, like these.</h3>
 
+          <p>LaCrue Bottling Co. October 2017</p>
 
-   </section>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+            ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+            dolore
+            eu fugiat nulla pariatur.
+          </p>
 
+        </div>
+
+      </div>
+
+    </section>
 
   </main>
 
@@ -111,12 +147,12 @@
       <div class="footer-content">
 
         <div class="contact">
+          <h3>Content</h3>
           <address>
-
-            <h3>Contact</h3>
-            <a href="tel:5555555555">555-555-5555</a>
-            <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
-
+            <p>
+              <a href="tel:5555555555">555-555-5555</a>
+              <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+            </p>
 
           </address>
 
@@ -130,15 +166,15 @@
 
             <p>
 
-              <a href="https://www.facebook.com/yoursite" target="self">
-                <img src="" alt="facebook logo>">
+              <a href="https://www.facebook.com/Skillcrush/" target="self">
+                <img src="" alt="facebook logo">
               </a>
 
             </p>
 
             <p>
 
-              <a href="https://twitter.com/i/flow/login" target="self">
+              <a href="https://twitter.com/Skillcrush" target="self">
                 <img src="" alt="twitter logo">
               </a>
 
@@ -146,21 +182,22 @@
 
             <p>
 
-              <a href="https://www.instagram.com/accounts/login/" target="self">
+              <a href="https://www.instagram.com/Skillcrush/" target="self">
                 <img src="" alt="instagram logo">
               </a>
 
-          </p>
+            </p>
 
-              <!--include any other social links-->
 
           </div>
 
         </div>
 
-      </div>  <!--footer content ends-->
+      </div>
+      <!--footer content ends-->
 
-    </div>  <!--footer content-wrapper ends-->
+    </div>
+    <!--footer content-wrapper ends-->
 
     <div class="copyright">
 
