Adjusted syntax and added classes, divs, and articles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <main>
 
-    <section top-section>
+    <section hero-area>
 
       <div class="content-wrapper">
 
@@ -67,7 +67,7 @@
 
       <div class="content-wrapper">
 
-        <div class="form-info">
+        <div class="form-description">
 
           <h3> Want to join the next retreat?</h3>
 
@@ -87,52 +87,99 @@
 
       </div>
 
+    </aside>
+
+    <section class="features">
+
       <div class="content-wrapper">
 
-        <div class="resort-description">
+        <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
 
-          <p>Have the work week you always dreamed of - without the bad wifi.</p>
+        <div class="feature-items">
 
-          <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+          <article>
 
-          <p>12 private rooms with ensuite bathrooms, 2 groups meeting rooms, and 4 breakout rooma.</p>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
 
-          <p>Private chef team providing on demand meals - just like your team kitchen</p>
+          </article>
 
-          <p> 5 outdoor obstacle courses, including private beach <sup>1</sup>&frasl;<sub>2</sub> mile from bungalow.
-          </p>
+          <article>
 
-          <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 groups meeting rooms, and 4
+              breakout
+              rooma.</p>
 
-          <p>Dedicated computer room for times that you need to use wifi.</p>
+          </article>
+
+          <article>
+
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Private chef team providing on demand meals - just like your team
+              kitchen</p>
+
+          </article>
+
+          <article>
+
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">
+              5 outdoor obstacle courses, including private beach
+              <sup>1</sup>&frasl;<sub>2</sub> mile from bungalow.
+            </p>
+
+          </article>
+
+          <article>
+
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get
+              a chance
+              to reset.</p>
+
+          </article>
+
+          <article>
+
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Dedicated computer room for times that you need to use wifi.</p>
+
+          </article>
 
         </div>
 
       </div>
 
+    </section>
 
-    </aside>
-
-
-    <section>
+    <section class="reviews">
 
       <div content-wrapper>
 
-        <div class="closing-section">
 
-          <h3>Be a better team in 5 days, like these.</h3>
+        <h2>Be a better team in 5 days, like these.</h2>
 
-          <p>LaCrue Bottling Co. October 2017</p>
+        <article>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-            ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-            dolore
-            eu fugiat nulla pariatur.
-          </p>
+          <div class="review-past">
 
-        </div>
+            <h3>LaCrue Bottling Co. October 2017</h3>
+
+            <p>
+              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
+              magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+              ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+              dolore
+              eu fugiat nulla pariatur."
+            </p>
+
+          </div>
+
+        </article>
+
+      </div>
 
       </div>
 
@@ -147,10 +194,11 @@
       <div class="footer-content">
 
         <div class="contact">
-          <h3>Content</h3>
+          <h4>Content</h4>
           <address>
             <p>
               <a href="tel:5555555555">555-555-5555</a>
+              <br>
               <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
             </p>
 
@@ -160,34 +208,27 @@
 
         <div class="social">
 
-          <h3>Social</h3>
+          <h4>Social</h4>
 
           <div class="social-icons">
 
             <p>
-
               <a href="https://www.facebook.com/Skillcrush/" target="self">
                 <img src="" alt="facebook logo">
               </a>
-
             </p>
 
             <p>
-
               <a href="https://twitter.com/Skillcrush" target="self">
                 <img src="" alt="twitter logo">
               </a>
-
             </p>
 
             <p>
-
               <a href="https://www.instagram.com/Skillcrush/" target="self">
                 <img src="" alt="instagram logo">
               </a>
-
             </p>
-
 
           </div>
 
