--- a/index.html
+++ b/index.html
@@ -194,12 +194,12 @@
       <div class="footer-content">
 
         <div class="contact">
-          <h4>Content</h4>
+          <h4>Contact</h4>
           <address>
             <p>
-              <a href="tel:5555555555">555-555-5555</a>
+              555-555-5555
               <br>
-              <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+              hello@unplugged.com
             </p>
 
           </address>
