Added in syntax for about page

--- a/about/index.html
+++ b/about/index.html
@@ -24,9 +24,187 @@
 
 <body>
 
-    <!-- Add your site or application content here -->
 
-    <p>Hello world! This is HTML5 Boilerplate.</p>
+    <header>
+
+        <div class="content-wrapper">
+
+            <a href="#">
+                <img src="img/unpluggedlogo.png" alt="unplugged logo">
+            </a>
+
+            <div class="header-divider"></div>
+
+            <nav>
+
+                <ul>
+                    <li><a href="faq/index.html" target="self">FAQ</a></li>
+                    <li><a href="index.html" target="self">ABOUT</a></li>
+                </ul>
+
+            </nav>
+
+        </div>
+
+    </header>
+
+
+    <main>
+
+        <section class="mission">
+
+            <div class="content-wrapper">
+
+                <div class="mission-content">
+
+                    <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur aldipiscing elit, sed do eiusmod tempor incididunt
+                        utlabore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
+                        macecenas accumsan lacus vel facilisis.
+                    </p>
+
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur aldipiscing elit, sed do eiusmod tempor incididunt
+                        utlabore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
+                        macecenas accumsan lacus vel facilisis.
+                    </p>
+
+                </div>
+                <!-- mission-content div ends here -->
+
+
+            </div> <!-- mission content wrapper ends here -->
+
+        </section> 
+
+
+        <section class="map">
+
+            <figure>
+
+
+
+            </figure>
+
+        </section>
+        <!-- map section ends here -->
+
+            <!-- contact info -->
+        <section class="contact-section">
+
+            <div class="content-wrapper">
+                <h2>Contact us, because you all need us.</h2>
+
+                <address class="contact-content">
+
+                    <div class="general-info"></div>
+
+                        <h4>General Information</h4>
+
+                            <p> 333 Main St, Lake Geneva, Wi, 53147
+                                <br>
+                                555-555-5555
+                                <br>
+                                hello@unplugged.com
+                            </p>
+
+                    </div>
+                    <!-- END OF GENERAL INFO DIV-->
+
+                    <div class="customer-service">
+
+                        <h4>Chat with a Faciliator</h4>
+
+                        <p>
+                            <a href="tel:5555555556">555-555-5556</a>
+                            <br>
+                            <a href="mailto:faciliator@unplugged.com">faciliator@unplugged.com</a>
+                        </p>
+
+                    </div>
+                    <!-- END OF CUSTOMER SERVICE DIV-->
+
+                </address> 
+                <!-- contact-content ends here -->   
+
+            </div> <!-- contact content wrapper ends here -->
+
+
+        </section>
+        <!-- end of contact section -->
+
+    </main>
+    <!-- END OF MAIN -->
+
+    <footer>
+
+        <div class="content-wrapper">
+
+            <div class="footer-content">
+
+                <div class="contact">
+                    <h4>Contact</h4>
+                    <address>
+                        <p>
+                            555-555-5555
+                            <br>
+                            hello@unplugged.com
+                        </p>
+
+                    </address>
+
+                </div>
+                <!-- END OF CONTACT DIV-->
+
+                <div class="social">
+
+                    <h4>Social</h4>
+
+                    <div class="social-icons">
+
+                        <p>
+                            <a href="https://www.facebook.com/Skillcrush/" target="self">
+                                <img src="" alt="facebook logo">
+                            </a>
+                        </p>
+
+                        <p>
+                            <a href="https://twitter.com/Skillcrush" target="self">
+                                <img src="" alt="twitter logo">
+                            </a>
+                        </p>
+
+                        <p>
+                            <a href="https://www.instagram.com/Skillcrush/" target="self">
+                                <img src="" alt="instagram logo">
+                            </a>
+                        </p>
+
+                    </div>
+                    <!-- END OF SOCIAL ICONS-->
+
+                </div>
+                <!-- END OF SOCIAL DIV-->
+
+            </div>
+            <!--footer content ends-->
+
+        </div>
+        <!--footer content-wrapper ends-->
+
+        <div class="copyright">
+
+            <p>Copyright 2019 | Unplugged</p>
+
+        </div>
+
+    </footer>
+    <!-- END OF FOOTER -->
+
+
+
     <script src="..js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="..js/plugins.js"></script>
     <script src="..js/main.js"></script>
@@ -37,6 +215,9 @@
         ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
     </script>
     <script src="https://www.google-analytics.com/analytics.js" async></script>
+
+
 </body>
+<!-- END OF BODY-->
 
 </html>
