Coded content for faq page

--- a/faq/index.html
+++ b/faq/index.html
@@ -24,9 +24,162 @@
 
 <body>
 
-    <!-- Add your site or application content here -->
+    <header>
 
-    <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div class="content-wrapper">
+
+            <a href="#">
+                <img src="img/unpluggedlogo.png" alt="unplugged logo">
+            </a>
+
+            <div class="header-divider"></div>
+
+            <nav>
+
+                <ul>
+                    <li><a href="index.html" target="self">FAQ</a></li>
+                    <li><a href="about/index.html" target="self">ABOUT</a></li>
+                </ul>
+
+            </nav>
+
+        </div>
+
+    </header>
+
+    <main class="questions">
+
+        <div class="content-wrapper">
+
+            <!-- may possibly remove and insert the class into every div created below -->
+            <div class="questions-content">
+
+                <h2>Frequently Asked Questions</h2>
+
+                <div>
+
+                    <h4>How do I get to the Unplugged retreat?</h4>
+
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+                    </p>
+
+                </div>
+
+                <div>
+
+                    <h4>What kind of team is right for the Unplugged retreat?</h4>
+
+                    <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                    ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+                    </p>
+
+                </div>
+
+                <div>
+
+                    <h4>What size team can you accomommadate?</h3>
+
+                    <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    lavore et dolore magna aliqua
+                    </p>
+
+                </div>
+
+
+                <div>
+
+                    <h4>Is there really no wifi available?</h4>
+
+                    <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                    ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+                    </p>
+
+                </div>
+
+
+            </div>
+            <!-- END OF QUESTIONS CONTENT -->
+
+
+        </div>
+        <!-- END OF CONTENT WRAPPER -->
+
+
+    </main>
+
+    <footer>
+
+        <div class="content-wrapper">
+
+            <div class="footer-content">
+
+                <div class="contact">
+                    <h4>Contact</h4>
+                    <address>
+                        <p>
+                            555-555-5555
+                            <br>
+                            hello@unplugged.com
+                        </p>
+
+                    </address>
+
+                </div>
+                <!-- END OF CONTACT DIV-->
+
+                <div class="social">
+
+                    <h4>Social</h4>
+
+                    <div class="social-icons">
+
+                        <p>
+                            <a href="https://www.facebook.com/Skillcrush/" target="self">
+                                <img src="" alt="facebook logo">
+                            </a>
+                        </p>
+
+                        <p>
+                            <a href="https://twitter.com/Skillcrush" target="self">
+                                <img src="" alt="twitter logo">
+                            </a>
+                        </p>
+
+                        <p>
+                            <a href="https://www.instagram.com/Skillcrush/" target="self">
+                                <img src="" alt="instagram logo">
+                            </a>
+                        </p>
+
+                    </div>
+                    <!-- END OF SOCIAL ICONS-->
+
+                </div>
+                <!-- END OF SOCIAL DIV-->
+
+            </div>
+            <!--footer content ends-->
+
+        </div>
+        <!--footer content-wrapper ends-->
+
+        <div class="copyright">
+
+            <p>Copyright 2019 | Unplugged</p>
+
+        </div>
+
+    </footer>
+    <!-- END OF FOOTER -->
+
+
+
+
     <script src="..js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="..js/plugins.js"></script>
     <script src="..js/main.js"></script>
