Adjusted links and other syntax

--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
 
         <ul>
 
-          <li><a href="faq/index.html" target="self">FAQ</a></li>
-          <li><a href="about/index.html" target="self">ABOUT</a></li>
+          <li>
+            <a href="faq/index.html" target="self">FAQ</a>
+          </li>
+
+          <li>
+            <a href="about/index.html" target="self">ABOUT</a>
+          </li>
 
         </ul>
 
@@ -49,10 +54,9 @@
 
   </header>
 
-
   <main>
 
-    <section hero-area>
+    <section class="hero-area">
 
       <div class="content-wrapper">
 
@@ -95,7 +99,7 @@
 
         <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
 
-        <div class="feature-items">
+        <div class="features-items">
 
           <article>
 
@@ -211,7 +215,7 @@
           <h4>Social</h4>
 
           <div class="social-icons">
-
+           
             <p>
               <a href="https://www.facebook.com/Skillcrush/" target="self">
                 <img src="" alt="facebook logo">
@@ -229,6 +233,7 @@
                 <img src="" alt="instagram logo">
               </a>
             </p>
+          
 
           </div>
 
