--- a/about/index.html
+++ b/about/index.html
@@ -16,8 +16,8 @@
     <link rel="apple-touch-icon" href="..icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="..css/normalize.css">
-    <link rel="stylesheet" href="..css/main.css">
+    <link rel="stylesheet" href="/unplugged-retreat/css/normalize.css">
+    <link rel="stylesheet" href="/unplugged-retreat/css/main.css">
 
     <meta name="theme-color" content="#fafafa">
 </head>
@@ -30,7 +30,7 @@
         <div class="content-wrapper">
 
             <a href="#">
-                <img src="img/unpluggedlogo.png" alt="unplugged logo">
+                <img src="/unplugged-retreat/img/unpluggedlogo.png" alt="unplugged logo">
             </a>
 
             <div class="header-divider"></div>
@@ -77,7 +77,7 @@
 
             </div> <!-- mission content wrapper ends here -->
 
-        </section> 
+        </section>
 
 
         <section class="map">
@@ -91,7 +91,7 @@
         </section>
         <!-- map section ends here -->
 
-            <!-- contact info -->
+        <!-- contact info -->
         <section class="contact-section">
 
             <div class="content-wrapper">
@@ -99,35 +99,26 @@
 
                 <address class="contact-content">
 
-                    <div class="general-info"></div>
+                    <h4>General Information</h4>
 
-                        <h4>General Information</h4>
+                    <p> 333 Main St, Lake Geneva, Wi, 53147
+                        <br>
+                        555-555-5555
+                        <br>
+                        hello@unplugged.com
+                    </p>
 
-                            <p> 333 Main St, Lake Geneva, Wi, 53147
-                                <br>
-                                555-555-5555
-                                <br>
-                                hello@unplugged.com
-                            </p>
+                <h4>Chat with a Faciliator</h4>
 
-                    </div>
-                    <!-- END OF GENERAL INFO DIV-->
+                <p>
+                    <a href="tel:5555555556">555-555-5556</a>
+                    <br>
+                    <a href="mailto:faciliator@unplugged.com">faciliator@unplugged.com</a>
+                </p>
 
-                    <div class="customer-service">
 
-                        <h4>Chat with a Faciliator</h4>
-
-                        <p>
-                            <a href="tel:5555555556">555-555-5556</a>
-                            <br>
-                            <a href="mailto:faciliator@unplugged.com">faciliator@unplugged.com</a>
-                        </p>
-
-                    </div>
-                    <!-- END OF CUSTOMER SERVICE DIV-->
-
-                </address> 
-                <!-- contact-content ends here -->   
+            </address>
+            <!-- contact-content ends here -->
 
             </div> <!-- contact content wrapper ends here -->
 
@@ -148,8 +139,7 @@
                     <h4>Contact</h4>
                     <address>
                         <p>
-                            555-555-5555
-                            <br>
+                            555-555-5555<br>
                             hello@unplugged.com
                         </p>
 
