--- a/faq/index.html
+++ b/faq/index.html
@@ -16,8 +16,8 @@
     <link rel="apple-touch-icon" href="..icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="..css/normalize.css">
-    <link rel="stylesheet" href="..css/main.css">
+    <link rel="stylesheet" href="/unplugged-retreat/css/normalize.css">
+    <link rel="stylesheet" href="/unplugged-retreat/css/main.css">
 
     <meta name="theme-color" content="#fafafa">
 </head>
@@ -29,7 +29,7 @@
         <div class="content-wrapper">
 
             <a href="#">
-                <img src="img/unpluggedlogo.png" alt="unplugged logo">
+                <img src="/unplugged-retreat/img/unpluggedlogo.png" alt="unplugged logo">
             </a>
 
             <div class="header-divider"></div>
@@ -47,12 +47,12 @@
 
     </header>
 
-    <main class="questions">
+    <main class="faq">
 
         <div class="content-wrapper">
 
             <!-- may possibly remove and insert the class into every div created below -->
-            <div class="questions-content">
+            <div class="faq-content">
 
                 <h2>Frequently Asked Questions</h2>
 
