Adjusted spelling errors

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <main>
 
-    <section class="hero-area">
+    <section class="hero-area" >
 
       <div class="content-wrapper">
 
@@ -76,7 +76,8 @@
           <h3> Want to join the next retreat?</h3>
 
           <p>
-            Find out when we are holding our next retreat and how your company or team can sign up!
+            Find out when we are holding our next retreat and
+             how your company or team can sign up!
           </p>
 
         </div>
@@ -97,7 +98,7 @@
 
       <div class="content-wrapper">
 
-        <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+        <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
 
         <div class="features-items">
 
@@ -111,9 +112,9 @@
           <article>
 
             <p class="fontawesome-icon"></p>
-            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 groups meeting rooms, and 4
-              breakout
-              rooma.</p>
+            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
+              breakout rooms.
+            </p>
 
           </article>
 
@@ -159,8 +160,7 @@
 
     <section class="reviews">
 
-      <div content-wrapper>
-
+      <div class="content-wrapper">
 
         <h2>Be a better team in 5 days, like these.</h2>
 
