Adjusted spelling errors

--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>About</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,7 +11,6 @@
     <meta property="og:type" content="">
     <meta property="og:url" content="">
     <meta property="og:image" content="">
-
     <link rel="manifest" href="..site.webmanifest">
     <link rel="apple-touch-icon" href="..icon.png">
     <!-- Place favicon.ico in the root directory -->
@@ -38,7 +37,7 @@
             <nav>
 
                 <ul>
-                    <li><a href="faq/index.html" target="self">FAQ</a></li>
+                    <li><a href="/unplugged-retreat/faq/index.html" target="self">FAQ</a></li>
                     <li><a href="index.html" target="self">ABOUT</a></li>
                 </ul>
 
@@ -108,17 +107,17 @@
                         hello@unplugged.com
                     </p>
 
-                <h4>Chat with a Faciliator</h4>
+                    <h4>Chat with a Faciliator</h4>
 
-                <p>
-                    <a href="tel:5555555556">555-555-5556</a>
-                    <br>
-                    <a href="mailto:faciliator@unplugged.com">faciliator@unplugged.com</a>
-                </p>
+                    <p>
+                        <a href="tel:5555555556">555-555-5556</a>
+                        <br>
+                        <a href="mailto:faciliator@unplugged.com">faciliator@unplugged.com</a>
+                    </p>
 
 
-            </address>
-            <!-- contact-content ends here -->
+                </address>
+                <!-- contact-content ends here -->
 
             </div> <!-- contact content wrapper ends here -->
 
