--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Faq</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -38,7 +38,7 @@
 
                 <ul>
                     <li><a href="index.html" target="self">FAQ</a></li>
-                    <li><a href="about/index.html" target="self">ABOUT</a></li>
+                    <li><a href="/unplugged-retreat/about/index.html" target="self">ABOUT</a></li>
                 </ul>
 
             </nav>
@@ -51,12 +51,9 @@
 
         <div class="content-wrapper">
 
-            <!-- may possibly remove and insert the class into every div created below -->
-            <div class="faq-content">
-
                 <h2>Frequently Asked Questions</h2>
 
-                <div>
+                <div class="faq-content">
 
                     <h4>How do I get to the Unplugged retreat?</h4>
 
@@ -67,7 +64,7 @@
 
                 </div>
 
-                <div>
+                <div class="faq-content">
 
                     <h4>What kind of team is right for the Unplugged retreat?</h4>
 
@@ -78,7 +75,7 @@
 
                 </div>
 
-                <div>
+                 <div class="faq-content">
 
                     <h4>What size team can you accomommadate?</h3>
 
@@ -90,7 +87,7 @@
                 </div>
 
 
-                <div>
+                <div class="faq-content">  
 
                     <h4>Is there really no wifi available?</h4>
 
