Deleted img links and created some divs

--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
         <div class="content-wrapper">
 
             <a href="#">
-                <img src="/unplugged-retreat/img/unpluggedlogo.png" alt="unplugged logo">
+                <img src="#" alt="unplugged logo">
             </a>
 
             <div class="header-divider"></div>
@@ -53,10 +53,9 @@
         <section class="mission">
 
             <div class="content-wrapper">
+                <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
 
                 <div class="mission-content">
-
-                    <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
 
                     <p>
                         Lorem ipsum dolor sit amet, consectetur aldipiscing elit, sed do eiusmod tempor incididunt
@@ -98,23 +97,27 @@
 
                 <address class="contact-content">
 
-                    <h4>General Information</h4>
+                    <div>
 
-                    <p> 333 Main St, Lake Geneva, Wi, 53147
-                        <br>
-                        555-555-5555
-                        <br>
-                        hello@unplugged.com
-                    </p>
+                     <h4>General Information</h4>
 
-                    <h4>Chat with a Faciliator</h4>
+                        <p> 333 Main St, Lake Geneva, Wi, 53147
+                         <br>
+                            555-555-5555
+                            <br>
+                            hello@unplugged.com
+                        </p>
+                    </div> 
 
-                    <p>
-                        <a href="tel:5555555556">555-555-5556</a>
-                        <br>
-                        <a href="mailto:faciliator@unplugged.com">faciliator@unplugged.com</a>
-                    </p>
+                    <div>
+                        <h4>Chat with a Faciliator</h4>
 
+                         <p>
+                            <a href="tel:5555555556">555-555-5556</a>
+                            <br>
+                            <a href="mailto:faciliator@unplugged.com">faciliator@unplugged.com</a>
+                        </p>
+                    </div>    
 
                 </address>
                 <!-- contact-content ends here -->
@@ -150,27 +153,23 @@
                 <div class="social">
 
                     <h4>Social</h4>
-
                     <div class="social-icons">
-
+                        
                         <p>
                             <a href="https://www.facebook.com/Skillcrush/" target="self">
-                                <img src="" alt="facebook logo">
                             </a>
                         </p>
 
                         <p>
                             <a href="https://twitter.com/Skillcrush" target="self">
-                                <img src="" alt="twitter logo">
-                            </a>
+                               </a>
                         </p>
 
                         <p>
                             <a href="https://www.instagram.com/Skillcrush/" target="self">
-                                <img src="" alt="instagram logo">
                             </a>
                         </p>
-
+                
                     </div>
                     <!-- END OF SOCIAL ICONS-->
 
