--- a/faq/index.html
+++ b/faq/index.html
@@ -29,7 +29,7 @@
         <div class="content-wrapper">
 
             <a href="#">
-                <img src="/unplugged-retreat/img/unpluggedlogo.png" alt="unplugged logo">
+                <img src="#" alt="unplugged logo">
             </a>
 
             <div class="header-divider"></div>
@@ -134,25 +134,22 @@
                     <h4>Social</h4>
 
                     <div class="social-icons">
-
+                        
                         <p>
                             <a href="https://www.facebook.com/Skillcrush/" target="self">
-                                <img src="" alt="facebook logo">
                             </a>
                         </p>
 
                         <p>
                             <a href="https://twitter.com/Skillcrush" target="self">
-                                <img src="" alt="twitter logo">
                             </a>
                         </p>
 
                         <p>
                             <a href="https://www.instagram.com/Skillcrush/" target="self">
-                                <img src="" alt="instagram logo">
                             </a>
                         </p>
-
+                    
                     </div>
                     <!-- END OF SOCIAL ICONS-->
 
