--- a/about/index.html
+++ b/about/index.html
@@ -15,8 +15,12 @@
     <link rel="apple-touch-icon" href="..icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="/unplugged-retreat/css/normalize.css">
-    <link rel="stylesheet" href="/unplugged-retreat/css/main.css">
+    <!--Google Font Links-->
+    
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/main.css">
 
     <meta name="theme-color" content="#fafafa">
 </head>
@@ -28,7 +32,7 @@
 
         <div class="content-wrapper">
 
-            <a href="#">
+            <a href="">
                 <img src="#" alt="unplugged logo">
             </a>
 
@@ -37,7 +41,7 @@
             <nav>
 
                 <ul>
-                    <li><a href="/unplugged-retreat/faq/index.html" target="self">FAQ</a></li>
+                    <li><a href="/faq/index.html" target="self">FAQ</a></li>
                     <li><a href="index.html" target="self">ABOUT</a></li>
                 </ul>
 
@@ -153,7 +157,7 @@
                 <div class="social">
 
                     <h4>Social</h4>
-                    
+
                     <div class="social-icons">
 
                         <p>
