--- a/index.html
+++ b/index.html
@@ -16,10 +16,17 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <!--Google Font Links-->
+
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
+<!--Website Pages Links-->
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/main.css">
+
 
   <meta name="theme-color" content="#fafafa">
+  
 </head>
 
 <body>
@@ -163,7 +170,7 @@
 
       <div class="content-wrapper">
 
-        <h2>Be a better team in 5 days, like these.</h2>
+        <h2>Be a better team in 5 days, like this one.</h2>
 
         <article>
 
