--- a/about/index.html
+++ b/about/index.html
@@ -16,11 +16,11 @@
     <!-- Place favicon.ico in the root directory -->
 
     <!--Google Font Links-->
-    
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/unplugged-retreat/css/normalize.css">
+    <link rel="stylesheet" href="/unplugged-retreat/css/main.css">
 
     <meta name="theme-color" content="#fafafa">
 </head>
