Fixed links to the other pages

--- a/faq/index.html
+++ b/faq/index.html
@@ -42,7 +42,7 @@
 
                 <ul>
                     <li><a href="index.html" target="self">FAQ</a></li>
-                    <li><a href="/about/index.html" target="self">ABOUT</a></li>
+                    <li><a href="/unplugged-retreat/about/index.html" target="self">ABOUT</a></li>
                 </ul>
 
             </nav>
