--- a/about/index.html
+++ b/about/index.html
@@ -41,7 +41,7 @@
             <nav>
 
                 <ul>
-                    <li><a href="/faq/index.html" target="self">FAQ</a></li>
+                    <li><a href="/unplugged-retreat/faq/index.html" target="self">FAQ</a></li>
                     <li><a href="index.html" target="self">ABOUT</a></li>
                 </ul>
 
