--- a/faq/index.html
+++ b/faq/index.html
@@ -20,8 +20,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="/unplugged-retreat/css/normalize.css">
-    <link rel="stylesheet" href="/unplugged-retreat/css/main.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/main.css">
 
     <meta name="theme-color" content="#fafafa">
 </head>
@@ -32,7 +32,7 @@
 
         <div class="content-wrapper">
 
-            <a href="#">
+            <a href="/index.html">
                 <img src="#" alt="unplugged logo">
             </a>
 
@@ -42,7 +42,7 @@
 
                 <ul>
                     <li><a href="index.html" target="self">FAQ</a></li>
-                    <li><a href="/unplugged-retreat/about/index.html" target="self">ABOUT</a></li>
+                    <li><a href="/about/index.html" target="self">ABOUT</a></li>
                 </ul>
 
             </nav>
