--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!--Website Pages Links-->
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
 
 
   <meta name="theme-color" content="#fafafa">
