Added unplugged logo to all pages

--- a/about/index.html
+++ b/about/index.html
@@ -27,19 +27,20 @@
 
 <body>
 
-
     <header>
 
-        <div class="content-wrapper">
-
+        <figure>
             <a href="/index.html">
-                <img src="#" alt="unplugged logo">
+                <img src="/img/unpluggedlogo.png" alt="unplugged logo">
             </a>
+        </figure>
+
+        <div class="content-wrapper">
 
             <div class="header-divider"></div>
 
             <nav>
-
+                
                 <ul>
                     <li><a href="/faq/index.html" target="self">FAQ</a></li>
                     <li><a href="index.html" target="self">ABOUT</a></li>
