--- a/faq/index.html
+++ b/faq/index.html
@@ -30,11 +30,14 @@
 
     <header>
 
+        <figure>
+            <a href="/index.html">
+                <img src="/img/unpluggedlogo.png" alt="unplugged logo">
+            </a>
+        </figure>
+
         <div class="content-wrapper">
 
-            <a href="/index.html">
-                <img src="#" alt="unplugged logo">
-            </a>
 
             <div class="header-divider"></div>
 
