--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
 
   <header>
 
+    <figure>
+      <a href="/index.html">
+        <img src="/img/unpluggedlogo.png" alt="unplugged logo">
+      </a>
+    </figure>
+
     <div class="content-wrapper">
 
-      <a href="#">
-        <img src="#" alt="unplugged logo">
-      </a>
 
       <div class="header-divider"></div>
 
@@ -171,25 +174,30 @@
       <div class="content-wrapper">
 
         <h2>Be a better team in 5 days, like this one.</h2>
+        
+        <figure>
+          <img src="/img/omar-lopez-296944-unsplash.png" >
+        </figure>
 
-        <article>
+          <article>
 
-          <div>
+            <div>
 
-            <h3>LaCrue Bottling Co. October 2017</h3>
+              <h3>LaCrue Bottling Co. October 2017</h3>
 
-            <p>
-              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore
-              magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-              ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-              dolore
-              eu fugiat nulla pariatur."
-            </p>
+              <p>
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum
+                dolore
+                eu fugiat nulla pariatur."
+              </p>
 
-          </div>
+            </div>
 
-        </article>
+          </article>
 
       </div>
 
