--- a/about/index.html
+++ b/about/index.html
@@ -40,7 +40,7 @@
             <div class="header-divider"></div>
 
             <nav>
-                
+
                 <ul>
                     <li><a href="/faq/index.html" target="self">FAQ</a></li>
                     <li><a href="index.html" target="self">ABOUT</a></li>
@@ -86,6 +86,16 @@
         <section class="map">
 
             <figure>
+
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!
+                    1m3!1d2937.085962885814!2d-88.42648574812367!
+                    3d42.595919628062646!2m3!1f0!2f0!3f0!
+                    3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88058bbef1e33f19%3A0xa9e28adaef1aa0be!
+                    2s333%20Main%20St%2C%20Lake%20Geneva%2C%20WI%2053147!
+                    5e0!3m2!1sen!2sus!4v1647673478168!5m2!1sen!2sus"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+                </iframe>
 
 
 
