--- a/faq/index.html
+++ b/faq/index.html
@@ -20,6 +20,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/cfe73f7aee.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/main.css">
 
