--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
+  <script src="https://kit.fontawesome.com/cfe73f7aee.js" crossorigin="anonymous"></script>
+
   <!--Website Pages Links-->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="/css/main.css">
@@ -33,13 +35,15 @@
 
   <header>
 
-    <figure>
-      <a href="/index.html">
-        <img src="/img/unpluggedlogo.png" alt="unplugged logo">
-      </a>
-    </figure>
+
 
     <div class="content-wrapper">
+
+          <figure>
+            <a href="/index.html">
+              <img src="/img/unpluggedlogo.png" alt="unplugged logo">
+            </a>
+          </figure>
 
 
       <div class="header-divider"></div>
@@ -114,7 +118,9 @@
 
           <article>
 
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-campground"></i>
+            </p>
             <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
             </p>
 
@@ -122,7 +128,9 @@
 
           <article>
 
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-bed"></i>
+            </p>
             <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
               breakout rooms.
             </p>
@@ -131,7 +139,9 @@
 
           <article>
 
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-utensils"></i>
+            </p>
             <p class="features-item-description">Private chef team providing on demand meals - just like your team
               kitchen</p>
 
@@ -139,7 +149,9 @@
 
           <article>
 
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-shoe-prints"></i>
+            </p>
             <p class="features-item-description">
               5 outdoor obstacle courses, including private beach
               <sup>1</sup>&frasl;<sub>2</sub> mile from bungalow.
@@ -149,7 +161,9 @@
 
           <article>
 
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-smile"></i>
+            </p>
             <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get
               a chance
               to reset.</p>
@@ -158,7 +172,9 @@
 
           <article>
 
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-wifi"></i>
+            </p>
             <p class="features-item-description">Dedicated computer room for times that you need to use wifi.</p>
 
           </article>
@@ -174,7 +190,7 @@
       <div class="content-wrapper">
 
         <h2>Be a better team in 5 days, like this one.</h2>
-        
+
         <figure>
           <img src="/img/omar-lopez-296944-unsplash.png" >
         </figure>
