--- a/about/index.html
+++ b/about/index.html
@@ -17,8 +17,8 @@
 
     <!--Google Font Links-->
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet"
-    
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/cfe73f7aee.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="/css/normalize.css">
@@ -89,14 +89,13 @@
 
             <figure>
 
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!
                     1m3!1d2937.085962885814!2d-88.42648574812367!
                     3d42.595919628062646!2m3!1f0!2f0!3f0!
                     3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88058bbef1e33f19%3A0xa9e28adaef1aa0be!
                     2s333%20Main%20St%2C%20Lake%20Geneva%2C%20WI%2053147!
-                    5e0!3m2!1sen!2sus!4v1647673478168!5m2!1sen!2sus"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+                    5e0!3m2!1sen!2sus!4v1647673478168!5m2!1sen!2sus" width="600" height="450" style="border:0;"
+                    allowfullscreen="" loading="lazy">
                 </iframe>
 
 
@@ -168,27 +167,31 @@
                 <!-- END OF CONTACT DIV-->
 
                 <div class="social">
-
                     <h4>Social</h4>
 
                     <div class="social-icons">
 
                         <p>
                             <a href="https://www.facebook.com/Skillcrush/" target="self">
+                                <i class="fab fa-facebook-f"></i>
                             </a>
                         </p>
 
                         <p>
                             <a href="https://twitter.com/Skillcrush" target="self">
-                            </a>
+                                <i class="fab fa-twitter"></i>
                         </p>
 
                         <p>
                             <a href="https://www.instagram.com/Skillcrush/" target="self">
+                                <i class="fab fa-instagram"></i>
                             </a>
+
                         </p>
 
+
                     </div>
+
                     <!-- END OF SOCIAL ICONS-->
 
                 </div>
