--- a/faq/index.html
+++ b/faq/index.html
@@ -139,25 +139,28 @@
                 <!-- END OF CONTACT DIV-->
 
                 <div class="social">
-
                     <h4>Social</h4>
 
                     <div class="social-icons">
 
                         <p>
                             <a href="https://www.facebook.com/Skillcrush/" target="self">
+                                <i class="fab fa-facebook-f"></i>
                             </a>
                         </p>
 
                         <p>
                             <a href="https://twitter.com/Skillcrush" target="self">
-                            </a>
+                                <i class="fab fa-twitter"></i>
                         </p>
 
                         <p>
                             <a href="https://www.instagram.com/Skillcrush/" target="self">
+                                <i class="fab fa-instagram"></i>
                             </a>
+
                         </p>
+
 
                     </div>
                     <!-- END OF SOCIAL ICONS-->
