--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 
     <div class="content-wrapper">
 
-          <figure>
-            <a href="/index.html">
-              <img src="/img/unpluggedlogo.png" alt="unplugged logo">
-            </a>
-          </figure>
+      <figure>
+        <a href="/index.html">
+          <img src="/img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
 
 
       <div class="header-divider"></div>
@@ -192,28 +192,28 @@
         <h2>Be a better team in 5 days, like this one.</h2>
 
         <figure>
-          <img src="/img/omar-lopez-296944-unsplash.png" >
+          <img src="/img/omar-lopez-296944-unsplash.png">
         </figure>
 
-          <article>
+        <article>
 
-            <div>
+          <div>
 
-              <h3>LaCrue Bottling Co. October 2017</h3>
+            <h3>LaCrue Bottling Co. October 2017</h3>
 
-              <p>
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum
-                dolore
-                eu fugiat nulla pariatur."
-              </p>
+            <p>
+              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
+              magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+              ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum
+              dolore
+              eu fugiat nulla pariatur."
+            </p>
 
-            </div>
+          </div>
 
-          </article>
+        </article>
 
       </div>
 
@@ -244,26 +244,24 @@
 
         <div class="social">
           <h4>Social</h4>
-
           <div class="social-icons">
-
             <p>
               <a href="https://www.facebook.com/Skillcrush/" target="self">
-
+                <i class="fab fa-facebook-f"></i>
               </a>
             </p>
 
             <p>
               <a href="https://twitter.com/Skillcrush" target="self">
-
+                <i class="fab fa-twitter"></i>
+              </a>  
             </p>
 
             <p>
               <a href="https://www.instagram.com/Skillcrush/" target="self">
+                <i class="fab fa-instagram"></i>
               </a>
-
             </p>
-
 
           </div>
 
