--- a/index.html
+++ b/index.html
@@ -191,26 +191,22 @@
 
         <h2>Be a better team in 5 days, like this one.</h2>
 
-        <figure>
-          <img src="/img/omar-lopez-296944-unsplash.png">
-        </figure>
-
+        
         <article>
+
+          <figure>
+            <img src="/img/omar-lopez-296944-unsplash.png">
+          </figure>
 
           <div>
 
             <h3>LaCrue Bottling Co. October 2017</h3>
 
-            <p>
-              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore
-              magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-              ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum
-              dolore
-              eu fugiat nulla pariatur."
-            </p>
-
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              </p>
           </div>
 
         </article>
