--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 
       <figure>
         <a href="/index.html">
-          <img src="/img/unpluggedlogo.png" alt="unplugged logo">
+
+          <img src="/img/unpluggedlogo.png" alt="unplugged-logo">
+          
         </a>
       </figure>
 
@@ -191,11 +193,10 @@
 
         <h2>Be a better team in 5 days, like this one.</h2>
 
-        
         <article>
 
           <figure>
-            <img src="/img/omar-lopez-296944-unsplash.png">
+            <img src="/img/omar-lopez-296944-unsplash.png" alt="photo of group of women">
           </figure>
 
           <div>
